--- a/index.html
+++ b/index.html
@@ -13,49 +13,49 @@
 </head>
 <body>
     <!-- Шапка -->
-    <header>
+    <header class="header">
         <nav>
-            <a href="">WebStudio</a>
+            <a class="webstudio" href=""><span class="web">Web</span>Studio</a>
             <ul>
-                <li><a href="/index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a class="link-li" href="/index.html">Студия</a></li>
+                <li><a class="link-li" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link-li" href="">Контакты</a></li>
             </ul>
         </nav> 
-            <a href="">info@devstudio</a>
-            <a href="">+38 096 111 11 11</a>
+            <a class="link" href="">info@devstudio</a>
+            <a class="link" href="">+38 096 111 11 11</a>
     </header>
     <!-- Головна частина -->
     <main>
             <!-- Рішення -->
-            <section>
-                <h1>Эффективные решения <br> для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
+            <section style="background: #2F303A;">
+                <h1 class="decision">Эффективные решения <br> для вашего бизнеса</h1>
+                <button class="btn" type="button">Заказать услугу</button>
             </section>
             <!-- Увага, пунктуальність, планування та сучасні технології -->
             <section>
                 <ul>
                     <li>
-                        <h3>Внимание к деталям</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        <h3 class="menu">Внимание к деталям</h3>
+                        <p class="submenu">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li>
-                        <h3>Пунктуальность</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        <h3 class="menu">Пунктуальность</h3>
+                        <p class="submenu">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li>
-                        <h3>Планирование</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <h3 class="menu">Планирование</h3>
+                        <p class="submenu">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li>
-                        <h3>Современные технологии</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <h3 class="menu">Современные технологии</h3>
+                        <p class="submenu">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             </section>
             <!-- Чим ми займаємось -->
             <section>
-                <h2>Чем мы занимаемся</h2>
+                <h2 class="work">Чем мы занимаемся</h2>
                 <ul>
                     <li>
                         <img src="./images/img.jpg" width="370" alt="программист работает в своем рабочем офисе">
@@ -69,38 +69,38 @@
                 </ul>
             </section>
             <!-- Команда -->
-            <section>
-                <h2>Наша команда</h2>
+            <section style="background: #F5F4FA;">
+                <h2 class="team">Наша команда</h2>
                 <ul>
                     <li>
                         <img src="./images/img4.jpg" width="270" height="260" alt="дизайнер продукта">
-                        <p>Игорь Демьяненко</p>
-                        <p>Product Designer</p>
+                        <p class="member">Игорь Демьяненко</p>
+                        <p class="kind" >Product Designer</p>
                     </li>
                     <li>
                         <img src="./images/img5.jpg" width="270" height="260" alt="фронтенд разработчик">
-                        <p>Ольга Репина</p>
-                        <p>Frontend Developer</p>
+                        <p class="member">Ольга Репина</p>
+                        <p class="kind">Frontend Developer</p>
                     </li>
                     <li>
                         <img src="./images/img6.jpg" width="270" height="260" alt="маркетолог">
-                        <p>Ольга Репина</p>
-                        <p>Marketing</p>
+                        <p class="member">Ольга Репина</p>
+                        <p class="kind">Marketing</p>
                     </li>
                     <li>
                         <img src="./images/img7.jpg" width="270" height="260" alt="дизайнер пользовательского интерфейса">
-                        <p>Ольга Репина</p>
-                        <p>UI Designer</p>
+                        <p class="member">Ольга Репина</p>
+                        <p class="kind">UI Designer</p>
                     </li>
                 </ul>
             </section>
     </main>   
     <!-- Футер -->
     <footer>
-            <a href="/">WebStudio</a>
-            <address>г. Киев, пр-т Леси Украинки, 26</address>
-            <a href="">info@example.com</a>
-            <a href="">+38 099 111 11 11</a>
+            <a class="webstudio-footer" href=""><span class="web">Web</span>Studio</a>
+            <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+            <a class="email" href="">info@example.com</a>
+            <a class="email" href="">+38 099 111 11 11</a>
     </footer>
 </body>
 </html>
