--- a/portfolio.html
+++ b/portfolio.html
@@ -6,20 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
     <!-- Header -->
-    <header>
+    <header class="header">
         <nav>
-        <a href="/">WebStudio</a>
+        <a class="webstudio" href=""><span class="web">Web</span>Studio</a>
         <ul>
-            <li><a href="./index.html">Студия</a></li>
-            <li><a href="./portfolio.html">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+            <li><a class="link-li" href="./index.html">Студия</a></li>
+            <li><a class="link-li" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="link-li" href="">Контакты</a></li>
         </ul>
         </nav>
-        <a href="">info@devstudio</a>
-        <a href="">+38 096 111 11 11</a>
+        <a class="link" href="">info@devstudio</a>
+        <a class="link" href="">+38 096 111 11 11</a>
     </header>
 <!-- Main -->
     <main>
@@ -94,10 +96,10 @@
     </main>
     <!-- Footer -->
     <footer>
-        <a href="/">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <a href="">info@example.com</a>
-        <a href="">+38 099 111 11 11</a>
+        <a class="webstudio-footer" href=""><span class="web">Web</span>Studio</a>
+        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+        <a class="email" href="">info@example.com</a>
+        <a class="email" href="">+38 099 111 11 11</a>
     </footer>
 </body>
 </html>
