--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
 </head>
-<body>
+<body style="background: #E5E5E5;">
     <!-- Header -->
     <header class="header">
         <nav>
@@ -27,19 +27,19 @@
     <main>
             <ul>
                 <li>
-                    <button type="button">Все</button>
+                    <button class="btn-li" type="button">Все</button>
                 </li>
                 <li>
-                    <button type="button">Веб-сайты</button>
+                    <button class="btn-li" class="btn-li" type="button">Веб-сайты</button>
                 </li>
                 <li>
-                    <button type="button">Приложения</button>
+                    <button class="btn-li" type="button">Приложения</button>
                 </li>
                 <li>
-                    <button type="button">Дизайн</button>
+                    <button class="btn-li" type="button">Дизайн</button>
                 </li>
                 <li>
-                    <button type="button">Маркетинг</button>
+                    <button class="btn-li" type="button">Маркетинг</button>
                 </li>
             </ul>
 
@@ -48,48 +48,48 @@
             <ul>
                 <li>
                     <img src="./images/img8.jpg" width="370" alt="Веб-сайт">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="title">Технокряк</h2>
+                    <p class="title-p">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/img9.jpg" width="370" alt="Постер New Orlean vs Golden Star">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                    <p class="title-p">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/img10.jpg" width="370" alt="Ресторан Seafood">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
+                    <h2 class="title">Ресторан Seafood</h2>
+                    <p class="title-p">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/img11.jpg" width="370" alt="наушники">
-                    <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="title">Проект Prime</h2>
+                    <p class="title-p">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/img12.jpg" width="370" alt="две коробки">
-                    <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
+                    <h2 class="title">Проект Boxes</h2>
+                    <p class="title-p">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/img13.jpg" width="370" alt="монитор">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="title">Inspiration has no Borders</h2>
+                    <p class="title-p">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/img14.jpg" width="370" alt="журнал">
-                    <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <h2 class="title">Издание Limited Edition</h2>
+                    <p class="title-p">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/img15.jpg" width="370" alt="єтикетка">
-                    <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="title">Проект LAB</h2>
+                    <p class="title-p">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/img16.jpg" width="370" alt="Приложение Growing Business">
-                    <h2>Growing Business</h2>
-                    <p>Приложение</p>
+                    <h2 class="title">Growing Business</h2>
+                    <p class="title-p">Приложение</p>
                 </li>
             </ul>
         </section>
