--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <!-- Шапка -->
     <header class="header">
         <nav>
-            <a class="webstudio" href=""><span class="web">Web</span>Studio</a>
+            <a class="webstudio text-decor" href=""><span class="web">Web</span>Studio</a>
             <ul>
-                <li><a class="link-li" href="/index.html">Студия</a></li>
-                <li><a class="link-li" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="link-li" href="">Контакты</a></li>
+                <li><a class="link-li text-decor" href="/index.html">Студия</a></li>
+                <li><a class="link-li text-decor" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link-li text-decor" href="">Контакты</a></li>
             </ul>
         </nav> 
-            <a class="link" href="">info@devstudio</a>
-            <a class="link" href="">+38 096 111 11 11</a>
+            <a class="link text-decor" href="">info@devstudio</a>
+            <a class="link text-decor" href="">+38 096 111 11 11</a>
     </header>
     <!-- Головна частина -->
     <main>
@@ -97,8 +97,8 @@
     </main>   
     <!-- Футер -->
     <footer>
-            <a class="webstudio-footer" href=""><span class="web">Web</span>Studio</a>
-            <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+            <a class="webstudio-footer text-decor" href=""><span class="web">Web</span>Studio</a>
+            <address class="address text-decor">г. Киев, пр-т Леси Украинки, 26</address>
             <a class="email" href="">info@example.com</a>
             <a class="email" href="">+38 099 111 11 11</a>
     </footer>
