--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,19 @@
     <!-- Header -->
     <header class="header">
         <nav>
-        <a class="webstudio" href=""><span class="web">Web</span>Studio</a>
+        <a class="webstudio text-decor" href=""><span class="web">Web</span>Studio</a>
         <ul>
-            <li><a class="link-li" href="./index.html">Студия</a></li>
-            <li><a class="link-li" href="./portfolio.html">Портфолио</a></li>
-            <li><a class="link-li" href="">Контакты</a></li>
+            <li><a class="link-li text-decor" href="./index.html">Студия</a></li>
+            <li><a class="link-li text-decor" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="link-li text-decor" href="">Контакты</a></li>
         </ul>
         </nav>
-        <a class="link" href="">info@devstudio</a>
-        <a class="link" href="">+38 096 111 11 11</a>
+        <a class="link text-decor" href="">info@devstudio</a>
+        <a class="link text-decor" href="">+38 096 111 11 11</a>
     </header>
 <!-- Main -->
     <main>
+        <section>
             <ul>
                 <li>
                     <button class="btn-li" type="button">Все</button>
@@ -42,8 +43,6 @@
                     <button class="btn-li" type="button">Маркетинг</button>
                 </li>
             </ul>
-
-        <section>
             <h1>Проекти</h1>
             <ul>
                 <li>
@@ -96,10 +95,10 @@
     </main>
     <!-- Footer -->
     <footer>
-        <a class="webstudio-footer" href=""><span class="web">Web</span>Studio</a>
+        <a class="webstudio-footer text-decor" href=""><span class="web">Web</span>Studio</a>
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-        <a class="email" href="">info@example.com</a>
-        <a class="email" href="">+38 099 111 11 11</a>
+        <a class="email text-decor" href="">info@example.com</a>
+        <a class="email text-decor" href="">+38 099 111 11 11</a>
     </footer>
 </body>
 </html>
